// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rename-script should handle non-existent script 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The script was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "The script could not be found",
    "type": "Error",
  },
}
`;

exports[`rename-script should handle renaming script to same name 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "A script with the same path already exists",
    "operationStatus": "AlreadyExists",
    "status": 400,
    "title": "Script already exists",
    "type": "Error",
  },
}
`;

exports[`rename-script should handle renaming with folder path (tests path handling) 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`rename-script should handle script folder rename attempt 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The script was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "The script could not be found",
    "type": "Error",
  },
}
`;

exports[`rename-script should rename a script 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`rename-script should rename a script in a folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
